<resources>
    <string name="app_name">SESHealthApplication</string>
    <string name="username_txt">Username</string>
    <string name="email_example_com">email@example.com</string>
    <string name="password_txt">Password</string>
    <string name="log_in_txt">Log In</string>
    <string name="login_activity_title">Log In</string>
    <string name="chooser_title">Lorem ipsum</string>
    <string name="google_places_key">AIzaSyDlCsaFgmjgQp4L3ih2sOhheDo8i4gfOjY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="patient_information">Patient Information</string>
    <string name="create_data_packet">Create Data Packet</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="record_video">Record Video</string>
    <string name="send_local_file">Send Local File</string>
    <string name="facilities_map">Facilities Map</string>

    <string-array name="doctors">
        <item>Diego</item>
        <item>Slesha</item>
        <item>Nathan</item>
        <item>Tanmay</item>
        <item>Zain</item>
        <item>Mohammed</item>
    </string-array>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <!-- FOR PATIENT INFORMATION FRAGMENT -->
    <string name="patient_first_name">First Name</string>
    <string name="patient_last_name">Last Name</string>
    <string name="patient_sex">Sex</string>
    <string name="patient_age">Age</string>
    <string name="patient_height">Height</string>
    <string name="patient_weight">Weight</string>
    <string name="patient_condition">Medical Condition</string>

    <string name="hint_first_name">Enter your first name</string>
    <string name="hint_last_name">Enter your last name</string>
    <string name="hint_sex">Enter your sex</string>
    <string name="hint_age">Enter your age</string>
    <string name="hint_height">Enter your height (cm)</string>
    <string name="hint_weight">Enter your weight (kg)</string>
    <string name="hint_condition">Enter details about your medical condition</string>

    <string name="edit_info_button">Edit</string>
    <color name='white'></color>

    <!-- Strings for the WriteMessage activity -->
    <string name="activity_label">Write a message</string>
    <string name="add_message">Add message</string>
    <string name="edit_message_hint">Tap to edit</string>
    <string name="char_count_text">Length: 0 characters</string>

    <!-- Strings for the Doctor details (My Details) -->
    <string name="doctor_specialty">Specialty</string>
    <string name="hint_doctor_specialty">Enter your specialty</string>
</resources>
