<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MyDetails">

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:layout_marginEnd="121dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="116dp"
        android:text="First Name"
        app:layout_constraintBottom_toTopOf="@+id/edit_doctor_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="55dp"
        android:text="Last Name"
        app:layout_constraintBottom_toTopOf="@+id/edit_doctor_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_doctor_first_name" />

    <Button
        android:id="@+id/ok_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="154dp"
        android:layout_marginEnd="117dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="43dp"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_doctor_specialty" />

    <EditText
        android:id="@+id/edit_doctor_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/hint_first_name"
        app:layout_constraintBottom_toTopOf="@+id/last_name"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        tools:layout_editor_absoluteX="85dp" />

    <EditText
        android:id="@+id/edit_doctor_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/hint_last_name"
        app:layout_constraintBottom_toTopOf="@+id/type"
        app:layout_constraintTop_toBottomOf="@+id/last_name"
        tools:layout_editor_absoluteX="84dp" />

    <EditText
        android:id="@+id/edit_doctor_specialty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/hint_doctor_specialty"
        app:layout_constraintBottom_toTopOf="@+id/ok_db"
        app:layout_constraintTop_toBottomOf="@+id/type"
        tools:layout_editor_absoluteX="84dp" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:layout_marginEnd="131dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="40dp"
        android:text="Speacility "
        app:layout_constraintBottom_toTopOf="@+id/edit_doctor_specialty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_doctor_last_name" />
</android.support.constraint.ConstraintLayout>